--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Boilerplate</title>
+    <title>JS Libraries Are Fun</title>
+
+<!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+<link rel="manifest" href="favicons/site.webmanifest">
+
 
     <!-- Stylesheets -->
 <link rel="stylesheet" href="style.css">
 
 <!-- Script -->
 <script defer src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js"></script>
 
 </head>
 <body>
     
-<h1>My Boilerplate</h1>
+
+
+<h1 id="demo3" class="rotate"> - Katie Yeager - CircleType.js - Practice - JS Libraries</h1>
 
 </body>
 </html>
